<resources>
    <string name="app_name">Amigos-Ud</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hola fragmento en blanco</string>

    <string name="Abrir">Abrir</string>
    <string name="Cerrar">Cerrar</string>


    //Activity Login
    <string name="IntroduceNum">Introduce tu numero celular</string>
    <string name="numero">Numero</string>
    <string name="EnviarCodigo">Enviar Codigo</string>
    <string name="IntroducirCodigo">Introduce tu codigo</string>
    <string name="Codigo">Codigo</string>
    <string name="VerificarCodigo">Verificar Codigo</string>

    //Activity Mensaje
    <string name="Mensaje">Mensaje</string>

    //Activity Registro
    <string name="AmigosUD">Amigos UD</string>
    <string name="IngresaDatos">Ingresa tus datos</string>
    <string name="SubirFoto">Subir foto de perfil</string>
    <string name="Nombre">Nombre</string>
    <string name="Correo">Correo universitario</string>
    <string name="Sede">Sede universidad</string>
    <string name="Terminos">Acepta los terminos y condiciones al usar esta app</string>
    <string name="Continuar">Continuar</string>


    //Cargar Layout
    <string name="Cargar">Cargando......</string>


    //Contenedor usuario mensaje
    <string name="pruebanombre">Hombre de Acero</string>

    //Fragment Perfil
    <string name="pruebafacultad">Tecnologica</string>
    <string name="pruebacorreo">ddrianos@correo.udistrital.edu.co</string>
    <string name="pruebanumero">3195978778</string>
    <string name="editarperfil">Editar Perfil</string>
    <string name="cerrarSesion">Cerrar Sesion</string>



    //layout enviar mensaje

    <string name="pruebamensaje">vamos a calmarnos por que nos estomos jodiendo</string>


    //Menu
    <string name="Amigos">Amigos</string>
    <string name="Mensajes">Mensajes</string>
    <string name="Perfil">Perfil</string>

    //navegacion_Informacion
    <string name="Universidad">Universidad</string>
    <string name="Compartir">Compartir</string>
    <string name="Condiciones">Terminos y Condiciones</string>
    <string name="Facultad">Facultad</string>
    <string name="Desarrollador">Desarrollador</string>



    //MensajeToast Mensaje Activity

    <string name="mensaje1">Por favor Ingrese un mensaje</string>
    <string name="mensaje2">Mensaje enviado</string>


    //Mensaje LoginActivity

    <string name="mensaje3">Por favor ingrese su número</string>
    <string name="mensaje4">Por favor ingrese su codigo</string>

    //Mensaje RegistroActivity

    <string name="mensaje5">Por favor llene todos los campos</string>
    <string name="mensaje6">Por favor Acepte los terminos y las condiciones de la app</string>
    <string name="mensaje7">Usuario Registrado con exito</string>


    //Mensaje Amigos fragment

    <string name="mensaje8">Esta es la ultima carta</string>


























</resources>