<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".utilidades.PerfilFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimario"
        android:layout_height="200dp">
        
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagenUsuario"
            android:layout_width="90dp"
            android:layout_centerInParent="true"
            android:src="@drawable/perfil"
            android:layout_height="90dp"/>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nombre"
            android:hint="@string/Nombre"
            android:text="@string/pruebanombre"
            android:clickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/facultad"
            android:hint="@string/Sede"
            android:text="@string/pruebafacultad"
            android:clickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/correo"
            android:hint="@string/Correo"
            android:text="@string/pruebacorreo"
            android:clickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/telefono"
            android:hint="@string/numero"
            android:text="@string/pruebanumero"
            android:clickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="12dp"
        android:weightSum="2">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/editarPerfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/editarperfil"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/salir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/cerrarSesion"/>
    </LinearLayout>





</LinearLayout>