<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RegistroActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/colorPrimario"
            android:orientation="vertical">
            
            <TextView
                android:layout_marginTop="48dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                style="bold"
                android:textSize="24sp"
                android:text="@string/AmigosUD"/>
            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                style="bold"
                android:textSize="16sp"
                android:text="@string/IngresaDatos"/>
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-110dp"
            android:id="@+id/numeroLayout"

            android:layout_marginHorizontal="36dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="7dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imagenUsuario"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/perfilregistro"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/SubirFoto" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nombreUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Nombre"
                        android:inputType="text"
                        android:drawablePadding="12dp"
                        android:drawableLeft="@drawable/nombreregistro"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/correoUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Correo"
                        android:inputType="textEmailAddress"
                        android:drawablePadding="12dp"
                        android:drawableLeft="@drawable/outlookregistro"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sedeUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Sede"
                        android:inputType="text"
                        android:drawablePadding="12dp"
                        android:drawableLeft="@drawable/localizacionregistro"/>
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/terminosCondiciones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:textSize="10sp"
                    android:text="@string/Terminos" />

                <TextView
                    android:background="@drawable/botonredondo"
                    android:id="@+id/guardarInformacion"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:text="@string/Continuar"
                    android:layout_height="40dp"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>